tests/typing/errors/reserved/arobase.smt2
(set-logic ALL)
(declare-fun @foo () Int)
(check-sat)
